<resources>
    <string name="app_name">YiMiaoManager</string>
    **********注册登录页面*************
    <string name="regest">注册</string>
    <string name="find_pwd">找回密码</string>
    <string name="input">请输入手机号/邮箱</string>
    <string name="next">下一步</string>
    <string name="phon">请输入11位手机号</string>
    <string name="in_yanz">请输入4位验证码</string>
    <string name="hq_yanz">获取验证码</string>
    <string name="login_paw">请输入登录密码（至少6位）</string>
    <string name="set_paw">设置新密码</string>
    <string name="repat_paw">重复</string>
    <string name="send">已发送验证码至</string>
    <string name="input_yzm">请输入验证码</string>
    <string name="new_pwd">请输入新密码（至少6位）</string>
    <string name="login">登录</string>
    ******************首页***********************
    <string name="tab1">百事通</string>
    <string name="tab2">荣誉榜</string>
    <string name="tab3">专家库</string>
    <string name="tab4">我的</string>
    <string name="quiz">快速提问</string>
    <string name="search">搜一搜试试</string>
    <string name="hot">热榜</string>
    <string name="anser">抢答</string>
    <string name="lj_anser">立即抢答</string>

</resources>
