<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.SetpwdActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="34dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:id="@+id/set_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/set_paw"
        android:textColor="@color/black"
        android:textSize="19sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
        android:text="@string/repat_paw"
        android:textColor="@color/darkgrey"
        android:layout_marginRight="22dp"
        android:textSize="14sp"/>
</RelativeLayout>
    <view
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/white1" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="30dp"
      android:textSize="13sp"
        android:textColor="@color/grey1"
        android:text="@string/send"/>
    <LinearLayout
        android:layout_width="315dp"
        android:layout_height="44dp"
        android:orientation="vertical"
        android:layout_marginTop="29dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/item_edit">

        <EditText
            android:layout_width="315dp"
            android:layout_height="44dp"
            android:padding="10dp"
            android:hint="@string/input_yzm"
            android:background="@null"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="315dp"
        android:layout_height="44dp"
        android:orientation="vertical"
        android:layout_marginTop="29dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/item_edit">

        <EditText
            android:layout_width="315dp"
            android:layout_height="44dp"
            android:padding="10dp"
            android:hint="@string/new_pwd"
            android:background="@null"/>

    </LinearLayout>
    <Button
        android:layout_width="315dp"
        android:layout_height="44dp"
        android:background="@drawable/login"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="19dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        />
</LinearLayout>