<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.RegestActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="34dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/regest"
            android:textColor="@color/black"
            android:textSize="19dp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/white">

    </ImageView>
    <LinearLayout
        android:layout_width="315dp"
        android:layout_height="44dp"
        android:orientation="vertical"
        android:layout_marginTop="29dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/item_edit">

        <EditText
            android:layout_width="315dp"
            android:layout_height="44dp"
            android:padding="10dp"
            android:hint="@string/phon"
            android:background="@null"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="29dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@null"
       >

        <EditText
            android:layout_width="170dp"
            android:layout_height="44dp"
            android:padding="10dp"
            android:background="@drawable/item_edit"
            android:hint="@string/in_yanz"
           />
        <EditText
            android:layout_width="124dp"
            android:layout_height="44dp"
            android:padding="10dp"
            android:layout_marginLeft="21dp"
            android:background="@drawable/item_edit_blue"
            android:textColor="@color/blue"
            android:hint="@string/hq_yanz"
           />
    </LinearLayout>
    <LinearLayout
        android:layout_width="315dp"
        android:layout_height="44dp"
        android:orientation="vertical"
        android:layout_marginTop="29dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/item_edit">

        <EditText
            android:layout_width="315dp"
            android:layout_height="44dp"
            android:padding="10dp"
            android:hint="@string/login_paw"
            android:background="@null"/>

    </LinearLayout>
    <Button
        android:layout_width="315dp"
        android:layout_height="44dp"
        android:background="@drawable/login"
        android:text="@string/regest"
        android:textColor="@color/white"
        android:textSize="19dp"
        android:layout_marginTop="88dp"
        android:layout_marginLeft="30dp"
        />
</LinearLayout>