<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".view.activity.FindPasswordActivity">

    <RelativeLayout
        android:id="@+id/lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp">

        <ImageView
            android:id="@+id/find_image"
            android:layout_width="13dp"
            android:layout_height="26dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/find_pwd"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </RelativeLayout>


    <view
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/white1" />

    <RelativeLayout
        android:layout_width="315dp"
        android:layout_height="44dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/item_edit"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/contact" />

        <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/iv"
            android:background="@null"
            android:hint="@string/input"
            android:textColor="#999999"
            android:textSize="14sp" />
    </RelativeLayout>

    <Button
        android:layout_width="315dp"
        android:layout_height="44dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/login"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="22sp" />

</LinearLayout>